--- a/src/app/pages/secretaria/reingreso-estudiante/reingreso-estudiante.component.html
+++ b/src/app/pages/secretaria/reingreso-estudiante/reingreso-estudiante.component.html
@@ -83,7 +83,7 @@
             </button>
 
             <span *ngIf="archivoPDF" class="selected-file">
-              ✅ {{ archivoPDF.name }}
+              {{ archivoPDF.name }}
             </span>
           </div>
 
