--- a/src/app/pages/coordinador/cursos-intersemestrales/preinscribir-estudiantes/preinscribir-estudiantes.component.html
+++ b/src/app/pages/coordinador/cursos-intersemestrales/preinscribir-estudiantes/preinscribir-estudiantes.component.html
@@ -124,7 +124,7 @@
 
   <!-- Información del curso seleccionado -->
   <div *ngIf="cursoSeleccionado && !cargando" class="curso-info">
-    <h4>📋 Información del Curso</h4>
+    <h4>Información del Curso</h4>
     <div class="info-grid">
       <div class="info-item">
         <strong>Docente:</strong> {{ obtenerNombreDocente(cursoSeleccionado) }}
