--- a/src/app/pages/estudiante/cursos-intersemestrales/cursos-ofertados/cursos-ofertados.component.html
+++ b/src/app/pages/estudiante/cursos-intersemestrales/cursos-ofertados/cursos-ofertados.component.html
@@ -1,5 +1,5 @@
 <app-card-container title="Cursos Ofertados">
-  <!-- ✨ NUEVO: Selector de período -->
+  <!-- Selector de período -->
   <app-periodo-selector
     *ngIf="!cargando"
     [soloRegistrados]="true"
