--- a/src/app/pages/estudiante/reingreso-estudiante/reingreso-estudiante.component.css
+++ b/src/app/pages/estudiante/reingreso-estudiante/reingreso-estudiante.component.css
@@ -48,7 +48,8 @@ mat-card-content {
 /* Botón Enviar Solicitud */
 .enviar-solicitud {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
   margin-top: 16px;
 }
 
