--- a/src/app/pages/funcionario/pruebas-ecaes/pruebas-ecaes.component.css
+++ b/src/app/pages/funcionario/pruebas-ecaes/pruebas-ecaes.component.css
@@ -330,9 +330,7 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   margin-bottom: 24px;
-}
-
-.info-card mat-card-header {
+}.info-card mat-card-header {
   background-color: #f5f5f5;
   padding: 16px;
   border-radius: 8px 8px 0 0;
@@ -344,9 +342,7 @@
   font-weight: 600;
   color: #333;
   margin: 0;
-}
-
-.info-card mat-card-title mat-icon {
+}.info-card mat-card-title mat-icon {
   color: var(--color-primario);
 }
 
